--- a/html/calculator.html
+++ b/html/calculator.html
@@ -59,97 +59,141 @@
                 <!--- /Page-banner. -->
 
                 <!--- Book An Appointment -->
-                <div class="appointment-section" data-aos="zoom-in-right">
-                    <h2 class="pl-10">Zion Auto Monthly Finance Calculator</h2>
-                    <div class="appointment-container">
-                        <div class="appointment-left">
-                            <div class="appointment-left-container">
-                                <h4>Monthly Calculator</h4>
-                                <p>Buy with trust and confidence. Our well-versed team takes pride in ensuring our consumers satisfaction</p>
-                                <div class="form-group form-group--v2">
-                                    <select class="wide" name="car_prom" id="car_prom"
-                                        data-error-container="car_prom-error">
-                                        <option value="" data-display="Select Advertised Car Promotion">Select Advertised Car Promotion</option>
-                                        <option value="Book Appointment">Book Appointment</option>
-                                        <option value="Request Call">Request Call</option>
-                                        <option value="Financing">Financing</option>
-                                        <option value="Packages">Packages</option>
-                                        <option value="Bespoke Cars">Bespoke Cars</option>
-                                        <option value="General">General</option>
+                <div class="calculator" data-aos="zoom-in-right">
+                    <h2 class="calculator__title">Zion Auto Monthly Finance Calculator</h2>
+                    <form class="calculator__form" method="post" id="calculator">
+
+                        <div class="calculator__left-column" id="left-column">
+
+                            <p class="calculator__desc">Buy with trust and confidence. Our well-versed team takes pride
+                                in ensuring our consumers satisfaction</p>
+                            <div class="calculator__input-wrapper calculator__input-wrapper--1" id="select-car-wrapper" data-error='true' data-select>
+                                <select class="wide" name="car_prom" id="select-car"
+                                    data-error-container="car_prom-error">
+                                    <option value="" data-display="Select Advertised Car Promotion">Select Advertised
+                                        Car Promotion</option>
+                                </select>
+                                <span id="enquiry_type-error" class="help-block help-block-error"></span>
+                            </div>
+                            <div class="calculator__text-wrapper">
+                                <div class="calculator__text calculator__text--bold">
+                                    <span>S$</span>
+                                    <span id="car-price">0</span>
+                                </div>
+                                <div class="calculator__text">Select Car</div>
+                            </div>
+                            <img alt="car" class="calculator__image" id="car-image" style="display: none;">
+                        </div>
+
+                        <div class="calculator__right-column">
+
+                            <div class="alert alert-success d-none" role="alert">
+                                We've received your
+                                information, we will get
+                                back to you shortly.
+                            </div>
+
+                            <div class="calculator__inputs" id="right-column-inputs">
+                                <div class="calculator__input-wrapper" id="period-wrapper"  data-error='true' data-select>
+                                    <select class="wide" name="period" id="period-select" data-error-container="period-error">
+                                        <option value="" data-display="Loan Period (Years)">
+                                            Loan Period (Years)
+                                        </option>
+                                        <option value="1">1-Year</option>
+                                        <option value="2">2-Years</option>
+                                        <option value="3">3-Years</option>
+                                        <option value="4">4-Years</option>
+                                        <option value="5">5-Years</option>
                                     </select>
                                     <span id="enquiry_type-error" class="help-block help-block-error"></span>
                                 </div>
-                                <h1 class="appointment-text appointment-text--bold">S$0</h1>
-                                <h2 class="appointment-text">Select Car</h2>
+                                <div class="calculator__input-wrapper" id="trade-in-wrapper"  data-error='true' data-select>
+                                    <select class="wide" name="trade-in" id="trade-in">
+                                        <option value="" data-display="Trade-In Availability">
+                                            Trade-In Availability
+                                        </option>
+                                        <option value="1">Yes, I’ve Trade-In</option>
+                                        <option value="0">No, I don't have Trade-In</option>
+                                    </select>
+                                </div>
+                                <div class="calculator__input-wrapper">
+                                    <p class="calculator__input-wrapper-text">Trade-In Details - Brand, Model, Year,
+                                        etc (If yes)</p>
+                                    <input type="text" id="details" name="details" class="form-control"
+                                        placeholder="Example: Mercedes-Benz 2012 GLA200">
+                                </div>
                             </div>
-                        </div>
-                        <div class="appointment-right" id="book-appointment">
-                            <h3>Book An Appointment</h3>
-                            <div class="appointment-form">
-                                <form name="appointment" id="appointment" method="post">
-                                    <div class="alert alert-success d-none" role="alert"> We've received your
-                                        information, we will get
-                                        back to you shortly. </div>
-                                    <div class="row">
-                                        <div class="col-lg-6 form-group">
-                                            <input type="text" id="first_name" name="first_name" class="form-control"
-                                                placeholder="First name">
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <input type="text" id="last_name" name="last_name" class="form-control"
-                                                placeholder="Last name">
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <input type="tel" id="phone" name="phone" class="form-control"
-                                                placeholder="Phone Number">
-                                        </div>
-                                        
-                                        <div class="col-lg-12 form-group">
-                                            <input type="email" id="email" name="email" class="form-control"
-                                                placeholder="Email Address">
-                                        </div>
-                                        <div class="col-lg-12 form-group">
-                                            <div class="checkbox">
-                                                <input id="terms_accepted" name="terms_accepted" type="checkbox"
-                                                    data-error-container="terms_accepted-error">
-                                                <label for="terms_accepted" class="checkbox-label">By submitting
-                                                    this
-                                                    form, you agree to our
-                                                    Privacy Policy and agree to receive sales and marketing
 
-                                                    communication from ZionAuto Gallery Pte Ltd</label>
-                                            </div>
-                                            <span id="terms_accepted-error" class="help-block help-block-error"></span>
-                                        </div>
-                                        <div class="col-lg-12 form-group text-center-xs">
-                                            <div class="submit-btn">
-                                                <button type="submit" name="submit" id="button"
-                                                    class="ready fancy btn btn-primary" value="Book Now">
-                                                    <div class="message submitMessage"> <span class="button-text">Book
-                                                            Now</span> </div>
-                                                    <div class="message loadingMessage">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 17">
-                                                            <circle class="loadingCircle" cx="2.2" cy="10" r="1.6" />
-                                                            <circle class="loadingCircle" cx="9.5" cy="10" r="1.6" />
-                                                            <circle class="loadingCircle" cx="16.8" cy="10" r="1.6" />
-                                                        </svg>
-                                                    </div>
-                                                    <div class="message successMessage">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 11">
-                                                            <polyline stroke="currentColor"
-                                                                points="1.4,5.8 5.1,9.5 11.6,2.1 " />
-                                                        </svg>
-                                                        <span class="button-text">Success</span>
-                                                    </div>
-                                                </button>
-                                                <canvas id="canvas"></canvas>
-                                            </div>
-                                        </div>
+                            <div class="calculator__result">
+                                <span class="calculator__text calculator__text--bold">
+                                    <span>S$</span>
+                                    <span id="mounthly">0</span>
+                                </span>
+                                <span class="calculator__text">Monthly</span>
+                            </div>
+
+                            <div class="submit-btn calculator__submit-btn">
+                                <button type="button" id="calculate-button" class="fancy btn btn-primary">
+                                    <div class="message submitMessage">
+                                         <span class="button-text">Calculate Mounthly</span>
                                     </div>
-                                </form>
+                                </button>
+                            </div>
+
+                            <div class="calculator__hidden" id="hidden-wrapper" style="display: none;">
+
+                                <p class="calculator__hidden-text">Fill in below to proceed with a follow-up from our
+                                    sales specialist.</p>
+
+                                <div class="calculator__inputs">
+                                    <div class="calculator__input-wrapper" data-error="true">
+                                        <input type="text" id="user-name" name="user-name" class="form-control"
+                                            placeholder="First & Last Name">
+                                    </div>
+                                    <div class="calculator__input-wrapper" data-error="true">
+                                        <input type="text" id="user-phone" name="user-phone" class="form-control"
+                                            placeholder="Phone Number">
+                                    </div>
+                                </div>
+
+                                <div class="checkbox calculator__checkbox" data-checkbox-wrapper>
+                                    <input name="terms_accepted" type="checkbox"
+                                        data-error-container="terms_accepted-error" id="checkbox">
+                                    <label for="checkbox" class="checkbox-label">
+                                        By submitting this form, you agree to our Privacy Policy and agree to receive
+                                        sales and marketing communication from ZionAuto Gallery Pte Ltd
+                                    </label>
+                                    <span id="terms_accepted-error" class="help-block help-block-error"></span>
+                                </div>
+
+                                <div class="submit-btn calculator__submit-btn">
+                                    <button type="button" name="submit" id="button" class="ready fancy btn btn-primary">
+                                        <div class="message submitMessage">
+                                             <span class="button-text">
+                                                Request Specialist
+                                             </span>
+                                        </div>
+                                        <div class="message loadingMessage">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 17">
+                                                <circle class="loadingCircle" cx="2.2" cy="10" r="1.6" />
+                                                <circle class="loadingCircle" cx="9.5" cy="10" r="1.6" />
+                                                <circle class="loadingCircle" cx="16.8" cy="10" r="1.6" />
+                                            </svg>
+                                        </div>
+                                        <div class="message successMessage">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 11">
+                                                <polyline stroke="currentColor" points="1.4,5.8 5.1,9.5 11.6,2.1 " />
+                                            </svg>
+                                            <span class="button-text">Success</span>
+                                        </div>
+                                    </button>
+                                    <canvas id="canvas"></canvas>
+                                </div>
+
                             </div>
                         </div>
-                    </div>
+
+                    </form>
                 </div>
                 <!--- /Book An Appointment -->
 
@@ -193,25 +237,6 @@
                 </div>
                 <!--- /PURCHASING YOUR PERFECT CAR! -->
 
-                <!--- Location -->
-                <div class="location-section">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6 col-xl-5" data-aos="fade-down-right">
-                            <div class="map"><img src="images/map.jpg" alt="" /></div>
-                        </div>
-                        <div class="col-md-12 col-lg-6 col-xl-7" data-aos="fade-up-left">
-                            <div class="location-box-right">
-                                <div class="location-title">Locate Us</div>
-                                <div class="location-address">We are located at 159 Sin Ming Road</div>
-                                <div class="location-address-2">#01-01/04 Arm Tech Building S575625</div>
-                                <p>Opposite Thomson Plaza (8 mins walk from bus stop)</p>
-                                <p>Buses Available: 162, 166, 163, 52, 167, 132, 855, 980, 410W, 165, 162M</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--- /Location -->
-
             </div>
 
         </div>
@@ -234,6 +259,10 @@
     <script src="js/jquery.menu-aim.js"></script>
     <script src="js/mobile-menu.js"></script>
     <script src="js/fancy-button.js"></script>
+    <script src="./js/calculator.js"></script>
+    <script>
+        new Calculator();
+    </script>
     @@include('./templates/linkedIn.html')
 </body>
 
